Updated bottom half of content. Spacing on circles works and looks good. Font still giving issues, adding font files here as well

--- a/index.css
+++ b/index.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'myFirstFont';
+    src: url(/OpenSans-Regular.ttf);
+}
+
+html {
+    background-color: #f9fafc;
+}
+
+.font {
+    font-family: 'myFirstFont';
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -10,7 +23,7 @@ a {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 60px;
+    margin-bottom: 140px;
 }
 ul.navitems {
     margin: 0;
@@ -48,40 +61,79 @@ li {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    margin-top: 300px;
 }
 
 
 .content {
     display: inline-flex;
+    width: 40%;
+    padding-right: 25px;
+    padding-left: 4px;
+    border-left: 5px solid grey;
+    height: 100%;
 }
 
-.container {
+.textbox {
+    font-size: 25px;
+}
+
+#container {
     display: inline-flex;
+    width: 50%;
+    position: relative;
 }
 
 #circle1 {
-    height: 200px;
-    width: 200px;
-    border-radius: 150px;
+    height: 325px;
+    width: 325px;
+    border-radius: 50%;
     background-color: rgba(247, 136,167, 0.6);
+    position: relative;
+    left: 10%;
+    top: 40px;
 }
 
 #circle2 {
-    height: 150px;
-    width: 150px;
-    border-radius: 70px;
+    height: 220px;
+    width: 220px;
+    border-radius: 50%;
     background-color: rgba(247, 193, 162, 0.7);
+    position: relative;
+    right: 2%;
+    top: 170px;
 }
 
 #circle3 {
-    height: 50px;
-    width: 50px;
-    border-radius: 40px;
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
     background-color: rgba(207, 130, 213, 0.6);
+    position: relative;
+    right: 18%;
+    top: 70px;
 }
 
 #chirpus {
     display: block;
     width: 100%;
+    font-size: 65px;
+}
+
+footer {
+    position: fixed;
+    bottom: 10px;
+    margin-top: 100px;
+    width: 100%;
+    height: 100px;
+    margin-left: 40%;
+}
+
+button#scroll {
+    height: 40px;
+    width: 120px;
+    border-radius: 35%;
+    background-color: black;
+    color: white;
+    margin-top: 30px;
+    font-size: 15px;
 }
